# statshouse-rs

./: Cargo.toml  README.md  test_template.txt
.github/workflows/: ci.yml
statshouse/: Cargo.toml
statshouse/src/: lib.rs
xtask/src/: main.rs
